# med-graphrag

./: .clinerules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  PROPOSAL.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
app/: __init__.py
app/api/: README.md  __init__.py  __main__.py
app/inference/: __init__.py  engine.py  entity_matcher.py  knowledge_retriever.py  (+7 more)
data/: README.md
deployments/: README.md
docs/: INFERENCE_MODULE_OVERVIEW.md  REFACTORING.md  医疗超适应症分析系统研究总结.md  医疗超适应症智能分析系统研究总结.md  实体抽取研究总结.md  方案设计.docx  系统设计及实现.md  超适应症分析研究总结.md
scripts/: README.md  analyze_clinical_cases.py  analyze_drug_id_matching.py  analyze_evaluation_dataset.py  evaluate_results.py  extract_indications_diseases.py  prepare_evaluation_dataset.py  preprocess_atc_data.py  test_drug_entity_matching.py  test_entity_matching.py  update_indications_list_from_json.py
services/: README.md
src/: database_manager.py  drug_entity_extractor.py  elasticsearch_indexer.py  generate_raw_kg.py  indication_entity_extractor.py  tag_normalizer.py  utils.py
tasks/: README.md  extract_diseases.py  extract_diseases_search_after.py  quick_start.sh  search_after.pid
tests/: INFERENCE_ISSUES.md  INFERENCE_TEST_SUMMARY.md  README.md  README_INFERENCE_TESTS.md  test_entity_recognition.py  test_indication_analysis.py  test_inference_e2e.py  test_inference_engine.py  test_inference_knowledge_retriever.py  test_inference_result_synthesizer.py  test_inference_rule_checker.py  test_pipeline_e2e.py  test_pipeline_snapshot.py
(+150 files in other folders)
