[project]
name = "medical-graphrag"
version = "1.0.0"
description = "医疗超适应症知识增强推理系统"
requires-python = ">=3.10,<3.13"
dependencies = [
    "neo4j==5.28.0",
    "pandas==2.1.4",
    "sqlalchemy==2.0.25",
    "mysql-connector-python==8.2.0",
    "tqdm==4.66.1",
    "huggingface-hub==0.28.1",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "psycopg2-binary==2.9.9",
    "elasticsearch==8.17.1",
    "beautifulsoup4==4.13.3",
    "openai==1.52.0",
    "httpx==0.27.2",
    "pytest==7.4.3",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "matplotlib>=3.10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
